Refactor: Replacing the AssertionsForClassTypes with the more general Assertions. Test cleanup.