@@ -1,9 +1,8 @@
 package gov.uk.courtdata.laastatus.controller;
 
-import static org.assertj.core.api.AssertionsForClassTypes.assertThat;
-import static org.junit.jupiter.api.Assertions.assertAll;
-import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.Mockito.any;
+import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
@@ -18,6 +17,7 @@ import gov.uk.courtdata.service.QueueMessageLogService;
 import java.util.ArrayList;
 import java.util.List;
 
+import org.assertj.core.api.SoftAssertions;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -28,7 +28,7 @@ import org.mockito.junit.jupiter.MockitoExtension;
 import com.google.gson.Gson;
 
 @ExtendWith(MockitoExtension.class)
-public class LaaStatusUpdateControllerTest {
+class LaaStatusUpdateControllerTest {
 
     @Mock
     private LaaStatusValidationProcessor laaStatusValidationProcessor;
@@ -51,7 +51,7 @@ public class LaaStatusUpdateControllerTest {
     }
 
     @Test
-    public void givenValidationIsPassed_whenControllerIsInvoked_thenPublisherIsCalled() {
+    void givenValidationIsPassed_whenControllerIsInvoked_thenPublisherIsCalled() {
 
         // given
         final MessageCollection messageCollection =
@@ -73,14 +73,15 @@ public class LaaStatusUpdateControllerTest {
                 laaStatusUpdateController.updateLAAStatus("48e60e52-70f9-415d-8c57-c25a16419a7c", caseDetailsJson);
 
         // then
-        assertAll(
-                () -> verify(laaStatusValidationProcessor).validate(any()),
-                () -> verify(laaStatusServiceUpdate, times(1)).updateMlaAndCDA(caseDetails),
-                () -> assertThat(messageResponse.getMessages().size()).isZero());
+        SoftAssertions.assertSoftly(s -> {
+            verify(laaStatusValidationProcessor).validate(any());
+            verify(laaStatusServiceUpdate, times(1)).updateMlaAndCDA(caseDetails);
+            assertThat(messageResponse.getMessages()).isEmpty();
+        });
     }
 
     @Test
-    public void givenValidationIsPassed_whenControllerIsInvoked_thenPublisherIsCalled1() {
+    void givenValidationIsPassed_whenControllerIsInvoked_thenPublisherIsCalled1() {
 
         // given
         final MessageCollection messageCollection =
@@ -92,7 +93,6 @@ public class LaaStatusUpdateControllerTest {
                           "caseUrn": "EITHERWAY"
                         }
                         """;
-        final CaseDetails caseDetails = gson.fromJson(caseDetailsJson, CaseDetails.class);
 
         // when
         when(laaStatusValidationProcessor.validate(
@@ -102,13 +102,14 @@ public class LaaStatusUpdateControllerTest {
         laaStatusUpdateController.updateLAAStatus(null, caseDetailsJson);
 
         // then
-        assertAll(
-                () -> verify(laaStatusValidationProcessor).validate(any()),
-                () -> verify(laaStatusServiceUpdate, times(1)).updateMlaAndCDA(any(CaseDetails.class)));
+        SoftAssertions.assertSoftly(s -> {
+            verify(laaStatusValidationProcessor).validate(any());
+            verify(laaStatusServiceUpdate, times(1)).updateMlaAndCDA(any(CaseDetails.class));
+        });
     }
 
     @Test
-    public void givenValidationIsFailed_whenControllerIsInvoked_thenPublisherIsNOTCalled() {
+    void givenValidationIsFailed_whenControllerIsInvoked_thenPublisherIsNOTCalled() {
 
         // given
         List<String> validationMessages = List.of("Test Validation Message");
@@ -130,14 +131,15 @@ public class LaaStatusUpdateControllerTest {
         laaStatusUpdateController.updateLAAStatus("48e60e52-70f9-415d-8c57-c25a16419a7c", caseDetailsJson);
 
         // then
-        assertAll(
-                () -> verify(laaStatusValidationProcessor).validate(any()),
-                () -> assertThat(messageCollection.getMessages().get(0)).isEqualTo("Test Validation Message"),
-                () -> verify(laaStatusServiceUpdate, times(0)).updateMlaAndCDA(caseDetails));
+        SoftAssertions.assertSoftly(s -> {
+            verify(laaStatusValidationProcessor).validate(any());
+            assertThat(messageCollection.getMessages().getFirst()).isEqualTo("Test Validation Message");
+            verify(laaStatusServiceUpdate, never()).updateMlaAndCDA(caseDetails);
+        });
     }
 
     @Test
-    public void givenExceptionIsRaised_whenControllerIsInvoked_thenPublisherIsNOTCalled() {
+    void givenExceptionIsRaised_whenControllerIsInvoked_thenPublisherIsNOTCalled() {
 
         // given
         String caseDetailsJson =
@@ -160,6 +162,6 @@ public class LaaStatusUpdateControllerTest {
                         "48e60e52-70f9-415d-8c57-c25a16419a7c", caseDetailsJson));
 
         // then
-        assertEquals("MAAT API Call failed - Validation Failed", maatCourtDataException.getMessage());
+        assertThat(maatCourtDataException.getMessage()).isEqualTo("MAAT API Call failed - Validation Failed");
     }
 }
